# disease-classifier

./: LICENSE  MANIFEST.in  README.md  mkdocs.yml  requirements.txt  setup.cfg  tox.ini
Tutorial/Model/CDT-PLDA/03_cdt_plda_models/: 02_PCA_v06.4.sav  02_PLDA_v06.4.sav  02_PLDA_v06_norm.csv
Tutorial/Model/RF/01_model/: M10_Nitta6l_32pix_8class_448_optimized.pb  M10_Nitta6l_32pix_8class_meta.xlsx
Tutorial/Model/RF/02_rf_model/: 09_RF_v02.3.sav  09_RF_v02.3_features.csv
docs/: index.md
src/disease_classifier/: __init__.py  _widget.py  _widget_test.py  aid_cv2_dnn.py  background_program.py  image_processing.py  napari.yaml
src/disease_classifier/UI/: MyWidget.py  art.qrc  art_rc.py  disease_classifier.py  disease_classifier.ui
src/disease_classifier/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
