[metadata]
name = disease-classifier
version = 0.0.1
author = Chenqi Zhang
author_email = cqzhang@g.ecc.u-tokyo.ac.jp
url = https://github.com/zcqwh/disease-classifier
license = BSD-3-Clause
description = A disease classifier based on iPAC images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/zcqwh/disease-classifier/issues
    Documentation = https://github.com/zcqwh/disease-classifier#README.md
    Source Code = https://github.com/zcqwh/disease-classifier
    User Support = https://github.com/zcqwh/disease-classifier/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    disease-classifier = disease_classifier:napari.yaml
